--- a/index.html
+++ b/index.html
@@ -329,18 +329,21 @@
         <a class="btn" href="consultas.html">(En construcción)</a>
       </article>
 
-      <!-- 10. Chat -->
-      <article class="card">
-        <div>
-          <div class="card-header">
-            <img src="img/herramientas.png" alt="Icono chat">
-            <h2>Chat en línea</h2>
-          </div>
-          <img class="card-image" src="img/tarjetas/chats.png" alt="Chat" />
-          <p>Canal rápido para plantear preguntas breves.</p>
-        </div>
-        <a class="btn" href="chat.html">(En construcción)</a>
-      </article>
+     <!-- 10. Chat público -->
+<article class="card">
+  <div>
+    <div class="card-header">
+      <img src="img/herramientas.png" alt="Icono chat">
+      <h2>Chat público</h2>
+    </div>
+
+    <img class="card-image" src="img/tarjetas/chats.png" alt="Chat público" />
+
+    <p>Chat abierto en tiempo real para consultas rápidas.</p>
+  </div>
+
+  <a class="btn" href="chat.html">Abrir herramienta</a>
+</article>
 
     </section>
   </main>
@@ -353,3 +356,4 @@
 
 </body>
 </html>
+
