--- a/chat.html
+++ b/chat.html
@@ -174,7 +174,7 @@
             de toda la comunidad y de FECCOO Enseñanza Extremadura.
           </p>
         </div>
-        <button class="btn-volver" onclick="location.href='index.html'">Volver</button>
+        <button class="btn-volver" onclick="location.href='index.html'">Volver a la portada</button>
       </div>
     </section>
 
@@ -269,3 +269,4 @@
 
 </body>
 </html>
+
