--- a/chat.html
+++ b/chat.html
@@ -48,13 +48,22 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.06);
       transition: transform 0.15s ease, box-shadow 0.15s ease;
     }
-
+    .block:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.12);
+    }
     .block h2 {
       margin: 0 0 8px;
       font-size: 1.25rem;
       color: #d60000;
     }
+    .block p {
+      margin: 0 0 8px;
+      font-size: 0.95rem;
+      color: #444;
+    }
 
+    /* Botón volver */
     .btn-volver {
       display: inline-block;
       padding: 6px 12px;
@@ -68,16 +77,20 @@
       text-decoration: none;
       margin-top: 6px;
     }
-    .btn-volver:hover { background: #b40000; }
+    .btn-volver:hover {
+      background: #b40000;
+    }
 
-    /* Layout chat */
+    /* Layout */
     .layout {
       display: grid;
       grid-template-columns: 1.1fr 1.3fr;
       gap: 16px;
     }
     @media (max-width: 900px) {
-      .layout { grid-template-columns: 1fr; }
+      .layout {
+        grid-template-columns: 1fr;
+      }
     }
 
     /* Contenedor del chat público */
@@ -119,6 +132,18 @@
       text-align: right;
     }
 
+    /* Mensajes oficiales FECCOOEx */
+    .chat-mensaje.oficial {
+      border-left: 4px solid #d60000;
+      background: #fff5f5;
+    }
+    .chat-mensaje.oficial .autor::after {
+      content: " · FECCOOEx";
+      font-weight: 400;
+      font-size: 0.75rem;
+      color: #b00000;
+    }
+
     .chat-form {
       display: flex;
       flex-direction: column;
@@ -127,11 +152,10 @@
       background: #f5f5f5;
       gap: 6px;
     }
-
     .chat-form-row {
-      display: flex; gap: 6px;
+      display: flex;
+      gap: 6px;
     }
-
     .chat-form input,
     .chat-form textarea {
       font-family: inherit;
@@ -141,17 +165,47 @@
       border: 1px solid #ccc;
       outline: none;
     }
+    .chat-form input {
+      flex: 1;
+    }
+    .chat-form textarea {
+      resize: vertical;
+      min-height: 60px;
+      max-height: 120px;
+    }
+    .chat-form input:focus,
+    .chat-form textarea:focus {
+      border-color: #d60000;
+      box-shadow: 0 0 0 1px rgba(214,0,0,0.15);
+    }
     .chat-form button {
+      align-self: flex-end;
       padding: 6px 12px;
-      background: #d60000;
-      color: #fff;
+      font-size: 0.85rem;
       border-radius: 4px;
       border: none;
       cursor: pointer;
       font-weight: 600;
+      background: #d60000;
+      color: #fff;
     }
-    .chat-form button:hover { background: #b40000; }
+    .chat-form button:hover {
+      background: #b40000;
+    }
 
+    footer {
+      font-size: 0.75rem;
+      text-align: center;
+      padding: 12px;
+      color: #444;
+      border-top: 1px solid #e0e0e0;
+      background: #fafafa;
+    }
+    footer img {
+      height: 22px;
+      vertical-align: middle;
+      margin-right: 6px;
+    }
   </style>
 </head>
 
@@ -165,44 +219,90 @@
   </header>
 
   <main>
+    <!-- Bloque de descripción + botón volver -->
     <section class="block">
-      <div style="display:flex; justify-content:space-between; flex-wrap:wrap;">
+      <div style="display:flex; justify-content:space-between; align-items:flex-start; gap:12px; flex-wrap:wrap;">
         <div>
-          <h2>¿Cómo funciona?</h2>
+          <h2>¿Cómo funciona este chat?</h2>
           <p>
-            Aquí puedes escribir dudas o comentarios, y ver en tiempo real las preguntas y respuestas
-            de toda la comunidad y de FECCOO Enseñanza Extremadura.
+            Este chat público permite plantear dudas breves y ver en tiempo real las preguntas y respuestas del
+            conjunto de participantes y de la Federación de Enseñanza de CCOO de Extremadura.
+          </p>
+          <p style="font-size:0.9rem; color:#555;">
+            Los mensajes de la organización aparecen destacados. El resto de mensajes se muestran tal como los escriben
+            las personas participantes. No compartas datos personales sensibles (salud, direcciones completas,
+            DNI, etc.).
           </p>
         </div>
-        <button class="btn-volver" onclick="location.href='index.html'">Volver a la portada</button>
+        <div style="text-align:right;">
+          <button class="btn-volver" onclick="window.location.href='index.html'">
+            Volver a la portada
+          </button>
+        </div>
       </div>
     </section>
 
+    <!-- Bloque con el chat -->
     <section class="block">
       <h2>Chat público en tiempo real</h2>
 
-      <div class="chat-publico-container">
-        <div id="mensajes" class="chat-mensajes"></div>
+      <div class="layout">
+        <!-- Columna izquierda: breve recordatorio -->
+        <div>
+          <p style="font-size:0.9rem;">
+            Instrucciones de uso:
+          </p>
+          <ul style="margin:6px 0 0 18px; font-size:0.9rem;">
+            <li>Escribe un nombre o alias (puede ser tu nombre de pila o un alias genérico).</li>
+            <li>Plantea tu duda o comentario en el cuadro de texto.</li>
+            <li>El mensaje será visible para todas las personas conectadas.</li>
+            <li>
+              Los mensajes emitidos por la Federación se mostrarán con un estilo destacado para identificarlos
+              fácilmente.
+            </li>
+          </ul>
+          <p style="margin-top:10px; font-size:0.85rem; color:#555;">
+            Este chat utiliza un servicio en la nube (Firestore, de Firebase) para almacenar los mensajes y
+            distribuirlos en tiempo real.
+          </p>
+        </div>
 
-        <form id="form-chat" class="chat-form">
-          <div class="chat-form-row">
-            <input id="nombre" placeholder="Tu nombre o alias (opcional)" />
+        <!-- Columna derecha: chat real -->
+        <div>
+          <div class="chat-publico-container">
+            <div id="mensajes" class="chat-mensajes">
+              <!-- Mensajes generados por JavaScript -->
+            </div>
+            <form id="form-chat" class="chat-form">
+              <div class="chat-form-row">
+                <input
+                  type="text"
+                  id="nombre"
+                  placeholder="Tu nombre o alias (opcional)"
+                  maxlength="50"
+                />
+              </div>
+              <textarea
+                id="texto"
+                placeholder="Escribe tu mensaje (máx. 500 caracteres)..."
+                maxlength="500"
+              ></textarea>
+              <button type="submit">Enviar mensaje</button>
+            </form>
           </div>
-          <textarea id="texto" placeholder="Escribe tu mensaje..." maxlength="500"></textarea>
-          <button>Enviar mensaje</button>
-        </form>
+        </div>
       </div>
-
     </section>
   </main>
 
-  <footer style="text-align:center; font-size:0.75rem; padding:12px;">
-    <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" height="22">
-    Licencia Creative Commons BY-ND 4.0
+  <footer>
+    <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" alt="Licencia CC BY-ND">
+    Este contenido se distribuye bajo licencia <strong>Creative Commons BY-ND 4.0</strong>, permitiendo compartir sin modificaciones y con atribución.
   </footer>
 
-  <!-- FIREBASE + FIRESTORE -->
+  <!-- Firebase + Firestore: chat público -->
   <script type="module">
+    // 1) Importar SDKs desde CDN (misma versión que usaste en Firebase)
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
     import {
       getFirestore,
@@ -214,59 +314,106 @@
       onSnapshot
     } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
 
-    /* 🔐 CONFIGURACIÓN DE TU PROYECTO (enmascarado en esta copia) */
+    // 2) Configuración de Firebase
+    // 🔴 IMPORTANTE: sustituye estos valores de ejemplo por los tuyos reales
+    // (los que te dio Firebase en el paso de configuración web)
     const firebaseConfig = {
-      apiKey: "AIzaSyD*****************72OY",
-      authDomain: "feccooex-chat.firebaseapp.com",
-      projectId: "feccooex-chat",
-      storageBucket: "feccooex-chat.firebasestorage.app",
-      messagingSenderId: "3237367*****",
-      appId: "1:323736709612:web:e7a23fb29************"
+      apiKey: "TU_API_KEY_AQUI",
+      authDomain: "TU_AUTH_DOMAIN_AQUI",
+      projectId: "TU_PROJECT_ID_AQUI",
+      storageBucket: "TU_STORAGE_BUCKET_AQUI",
+      messagingSenderId: "TU_SENDER_ID_AQUI",
+      appId: "TU_APP_ID_AQUI"
     };
 
-    /* 🚀 Inicializar Firebase y Firestore */
+    // 3) Inicializar Firebase y Firestore
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
-    const mensajesRef = collection(db, "mensajes_publicos");
 
-    /* 🟢 Escuchar mensajes en tiempo real */
+    // Colección donde guardamos los mensajes
+    const mensajesRef = collection(db, "mensajes_publicos_feccooex");
+
+    // 4) Referencias al DOM
     const mensajesDiv = document.getElementById("mensajes");
     const form = document.getElementById("form-chat");
     const inputNombre = document.getElementById("nombre");
     const inputTexto = document.getElementById("texto");
 
+    // Variable para antispam (último envío en milisegundos)
+    let ultimoEnvioMs = 0;
+
+    // 5) Escuchar los mensajes en tiempo real
     onSnapshot(query(mensajesRef, orderBy("timestamp", "asc")), (snapshot) => {
       mensajesDiv.innerHTML = "";
-      snapshot.forEach(doc => {
-        const m = doc.data();
+
+      snapshot.forEach((docSnap) => {
+        const m = docSnap.data();
+        const nombre = m.nombre || "Anónimo";
+        const texto = m.texto || "";
+
+        // Detectar si es un mensaje oficial (por nombre)
+        const esOficial = /ccoo|feccooex|federaci.n|fe ense/gi.test(nombre);
+
         const div = document.createElement("div");
-        div.className = "chat-mensaje";
-        const hora = m.timestamp?.toDate().toLocaleTimeString("es-ES", { hour: "2-digit", minute:"2-digit" }) || "";
+        div.className = "chat-mensaje" + (esOficial ? " oficial" : "");
+
+        // Formatear fecha + hora si hay timestamp
+        let fechaTexto = "";
+        if (m.timestamp) {
+          const d = m.timestamp.toDate();
+          const fecha = d.toLocaleDateString("es-ES", {
+            day: "2-digit",
+            month: "2-digit"
+          });
+          const hora = d.toLocaleTimeString("es-ES", {
+            hour: "2-digit",
+            minute: "2-digit"
+          });
+          fechaTexto = `${fecha} · ${hora}`;
+        }
+
         div.innerHTML = `
-          <div class="autor">${m.nombre || "Anónimo"}</div>
-          <div class="texto">${m.texto}</div>
-          <div class="hora">${hora}</div>
+          <div class="autor">${nombre}</div>
+          <div class="texto">${texto}</div>
+          <div class="hora">${fechaTexto}</div>
         `;
+
         mensajesDiv.appendChild(div);
       });
+
+      // Desplazar al último mensaje
       mensajesDiv.scrollTop = mensajesDiv.scrollHeight;
     });
 
-    /* 📝 Enviar mensajes */
+    // 6) Enviar mensaje (con antispam sencillo)
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
+
       const nombre = inputNombre.value.trim() || "Anónimo";
       const texto = inputTexto.value.trim();
       if (!texto) return;
-      await addDoc(mensajesRef, {
-        nombre,
-        texto,
-        timestamp: serverTimestamp()
-      });
-      inputTexto.value = "";
+
+      const ahora = Date.now();
+
+      // Limitar a un mensaje cada 5 segundos
+      if (ahora - ultimoEnvioMs < 5000) {
+        alert("Espera unos segundos antes de enviar otro mensaje.");
+        return;
+      }
+
+      try {
+        await addDoc(mensajesRef, {
+          nombre,
+          texto,
+          timestamp: serverTimestamp()
+        });
+        ultimoEnvioMs = ahora;
+        inputTexto.value = "";
+      } catch (err) {
+        console.error("Error al enviar mensaje:", err);
+        alert("No se ha podido enviar el mensaje. Inténtalo de nuevo más tarde.");
+      }
     });
   </script>
-
 </body>
 </html>
-
