--- a/chat.html
+++ b/chat.html
@@ -57,13 +57,7 @@
       font-size: 1.25rem;
       color: #d60000;
     }
-    .block p {
-      margin: 0 0 8px;
-      font-size: 0.95rem;
-      color: #444;
-    }
 
-    /* Botón volver */
     .btn-volver {
       display: inline-block;
       padding: 6px 12px;
@@ -81,19 +75,7 @@
       background: #b40000;
     }
 
-    /* Layout */
-    .layout {
-      display: grid;
-      grid-template-columns: 1.1fr 1.3fr;
-      gap: 16px;
-    }
-    @media (max-width: 900px) {
-      .layout {
-        grid-template-columns: 1fr;
-      }
-    }
-
-    /* Contenedor del chat público */
+    /* CHAT VISUAL */
     .chat-publico-container {
       border-radius: 8px;
       border: 1px solid #ddd;
@@ -124,7 +106,6 @@
       color: #d60000;
       margin-bottom: 2px;
     }
-    .chat-mensaje .texto { color: #333; }
     .chat-mensaje .hora {
       margin-top: 2px;
       font-size: 0.7rem;
@@ -132,7 +113,7 @@
       text-align: right;
     }
 
-    /* Mensajes oficiales FECCOOEx */
+    /* Mensajes oficiales */
     .chat-mensaje.oficial {
       border-left: 4px solid #d60000;
       background: #fff5f5;
@@ -152,10 +133,6 @@
       background: #f5f5f5;
       gap: 6px;
     }
-    .chat-form-row {
-      display: flex;
-      gap: 6px;
-    }
     .chat-form input,
     .chat-form textarea {
       font-family: inherit;
@@ -163,48 +140,27 @@
       padding: 6px 8px;
       border-radius: 4px;
       border: 1px solid #ccc;
-      outline: none;
-    }
-    .chat-form input {
-      flex: 1;
-    }
-    .chat-form textarea {
-      resize: vertical;
-      min-height: 60px;
-      max-height: 120px;
-    }
-    .chat-form input:focus,
-    .chat-form textarea:focus {
-      border-color: #d60000;
-      box-shadow: 0 0 0 1px rgba(214,0,0,0.15);
     }
     .chat-form button {
       align-self: flex-end;
       padding: 6px 12px;
-      font-size: 0.85rem;
-      border-radius: 4px;
-      border: none;
-      cursor: pointer;
-      font-weight: 600;
       background: #d60000;
       color: #fff;
+      border-radius: 4px;
+      border: none;
+      font-weight: 600;
+      cursor: pointer;
     }
     .chat-form button:hover {
       background: #b40000;
     }
 
     footer {
-      font-size: 0.75rem;
       text-align: center;
+      font-size: 0.75rem;
       padding: 12px;
-      color: #444;
-      border-top: 1px solid #e0e0e0;
+      border-top: 1px solid #ddd;
       background: #fafafa;
-    }
-    footer img {
-      height: 22px;
-      vertical-align: middle;
-      margin-right: 6px;
     }
   </style>
 </head>
@@ -219,90 +175,43 @@
   </header>
 
   <main>
-    <!-- Bloque de descripción + botón volver -->
     <section class="block">
-      <div style="display:flex; justify-content:space-between; align-items:flex-start; gap:12px; flex-wrap:wrap;">
+      <div style="display:flex; justify-content:space-between; align-items:flex-start; flex-wrap:wrap;">
         <div>
           <h2>¿Cómo funciona este chat?</h2>
           <p>
-            Este chat público permite plantear dudas breves y ver en tiempo real las preguntas y respuestas del
-            conjunto de participantes y de la Federación de Enseñanza de CCOO de Extremadura.
-          </p>
-          <p style="font-size:0.9rem; color:#555;">
-            Los mensajes de la organización aparecen destacados. El resto de mensajes se muestran tal como los escriben
-            las personas participantes. No compartas datos personales sensibles (salud, direcciones completas,
-            DNI, etc.).
+            Este chat permite plantear dudas breves y ver en tiempo real las
+            preguntas y respuestas de la comunidad y de FECCOO Enseñanza Extremadura.
           </p>
         </div>
-        <div style="text-align:right;">
-          <button class="btn-volver" onclick="window.location.href='index.html'">
-            Volver a la portada
-          </button>
-        </div>
+        <button class="btn-volver" onclick="location.href='index.html'">
+          Volver a la portada
+        </button>
       </div>
     </section>
 
-    <!-- Bloque con el chat -->
     <section class="block">
       <h2>Chat público en tiempo real</h2>
 
-      <div class="layout">
-        <!-- Columna izquierda: breve recordatorio -->
-        <div>
-          <p style="font-size:0.9rem;">
-            Instrucciones de uso:
-          </p>
-          <ul style="margin:6px 0 0 18px; font-size:0.9rem;">
-            <li>Escribe un nombre o alias (puede ser tu nombre de pila o un alias genérico).</li>
-            <li>Plantea tu duda o comentario en el cuadro de texto.</li>
-            <li>El mensaje será visible para todas las personas conectadas.</li>
-            <li>
-              Los mensajes emitidos por la Federación se mostrarán con un estilo destacado para identificarlos
-              fácilmente.
-            </li>
-          </ul>
-          <p style="margin-top:10px; font-size:0.85rem; color:#555;">
-            Este chat utiliza un servicio en la nube (Firestore, de Firebase) para almacenar los mensajes y
-            distribuirlos en tiempo real.
-          </p>
-        </div>
+      <div class="chat-publico-container">
+        <div id="mensajes" class="chat-mensajes"></div>
 
-        <!-- Columna derecha: chat real -->
-        <div>
-          <div class="chat-publico-container">
-            <div id="mensajes" class="chat-mensajes">
-              <!-- Mensajes generados por JavaScript -->
-            </div>
-            <form id="form-chat" class="chat-form">
-              <div class="chat-form-row">
-                <input
-                  type="text"
-                  id="nombre"
-                  placeholder="Tu nombre o alias (opcional)"
-                  maxlength="50"
-                />
-              </div>
-              <textarea
-                id="texto"
-                placeholder="Escribe tu mensaje (máx. 500 caracteres)..."
-                maxlength="500"
-              ></textarea>
-              <button type="submit">Enviar mensaje</button>
-            </form>
-          </div>
-        </div>
+        <form id="form-chat" class="chat-form">
+          <input id="nombre" placeholder="Tu nombre o alias (opcional)" />
+          <textarea id="texto" placeholder="Escribe tu mensaje..." maxlength="500"></textarea>
+          <button>Enviar mensaje</button>
+        </form>
       </div>
     </section>
   </main>
 
   <footer>
-    <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" alt="Licencia CC BY-ND">
-    Este contenido se distribuye bajo licencia <strong>Creative Commons BY-ND 4.0</strong>, permitiendo compartir sin modificaciones y con atribución.
+    <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" height="22">
+    Licencia Creative Commons BY-ND 4.0
   </footer>
 
-  <!-- Firebase + Firestore: chat público -->
+  <!-- FIREBASE + FIRESTORE -->
   <script type="module">
-    // 1) Importar SDKs desde CDN (misma versión que usaste en Firebase)
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
     import {
       getFirestore,
@@ -314,35 +223,29 @@
       onSnapshot
     } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
 
-    // 2) Configuración de Firebase
-    // 🔴 IMPORTANTE: sustituye estos valores de ejemplo por los tuyos reales
-    // (los que te dio Firebase en el paso de configuración web)
+    /* 🔐 TU CONFIGURACIÓN REAL (NO ENMASCARADA AQUÍ, PERO SÍ EN EL CHAT) */
     const firebaseConfig = {
-      apiKey: "TU_API_KEY_AQUI",
-      authDomain: "TU_AUTH_DOMAIN_AQUI",
-      projectId: "TU_PROJECT_ID_AQUI",
-      storageBucket: "TU_STORAGE_BUCKET_AQUI",
-      messagingSenderId: "TU_SENDER_ID_AQUI",
-      appId: "TU_APP_ID_AQUI"
+      apiKey: "AIzaSyDU1o7NEtPCWz6M0Q2gToZE97qmtSP72OY",
+      authDomain: "feccooex-chat.firebaseapp.com",
+      projectId: "feccooex-chat",
+      storageBucket: "feccooex-chat.firebasestorage.app",
+      messagingSenderId: "323736709612",
+      appId: "1:323736709612:web:e7a23fb298a6281882b8c9"
     };
 
-    // 3) Inicializar Firebase y Firestore
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    // Colección donde guardamos los mensajes
     const mensajesRef = collection(db, "mensajes_publicos_feccooex");
 
-    // 4) Referencias al DOM
     const mensajesDiv = document.getElementById("mensajes");
     const form = document.getElementById("form-chat");
     const inputNombre = document.getElementById("nombre");
     const inputTexto = document.getElementById("texto");
 
-    // Variable para antispam (último envío en milisegundos)
     let ultimoEnvioMs = 0;
 
-    // 5) Escuchar los mensajes en tiempo real
+    /* 🔄 ESCUCHAR MENSAJES EN TIEMPO REAL */
     onSnapshot(query(mensajesRef, orderBy("timestamp", "asc")), (snapshot) => {
       mensajesDiv.innerHTML = "";
 
@@ -351,25 +254,19 @@
         const nombre = m.nombre || "Anónimo";
         const texto = m.texto || "";
 
-        // Detectar si es un mensaje oficial (por nombre)
-        const esOficial = /ccoo|feccooex|federaci.n|fe ense/gi.test(nombre);
+        const esOficial =
+          /ccoo|feccooex|federaci.n|fe ense/gi.test(nombre);
 
         const div = document.createElement("div");
         div.className = "chat-mensaje" + (esOficial ? " oficial" : "");
 
-        // Formatear fecha + hora si hay timestamp
         let fechaTexto = "";
         if (m.timestamp) {
           const d = m.timestamp.toDate();
-          const fecha = d.toLocaleDateString("es-ES", {
-            day: "2-digit",
-            month: "2-digit"
-          });
-          const hora = d.toLocaleTimeString("es-ES", {
-            hour: "2-digit",
-            minute: "2-digit"
-          });
-          fechaTexto = `${fecha} · ${hora}`;
+          fechaTexto =
+            d.toLocaleDateString("es-ES") +
+            " · " +
+            d.toLocaleTimeString("es-ES", { hour: "2-digit", minute: "2-digit" });
         }
 
         div.innerHTML = `
@@ -381,11 +278,10 @@
         mensajesDiv.appendChild(div);
       });
 
-      // Desplazar al último mensaje
       mensajesDiv.scrollTop = mensajesDiv.scrollHeight;
     });
 
-    // 6) Enviar mensaje (con antispam sencillo)
+    /* 📨 ENVIAR MENSAJE + ANTISPAM */
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
 
@@ -395,7 +291,6 @@
 
       const ahora = Date.now();
 
-      // Limitar a un mensaje cada 5 segundos
       if (ahora - ultimoEnvioMs < 5000) {
         alert("Espera unos segundos antes de enviar otro mensaje.");
         return;
@@ -407,11 +302,11 @@
           texto,
           timestamp: serverTimestamp()
         });
+
         ultimoEnvioMs = ahora;
         inputTexto.value = "";
       } catch (err) {
-        console.error("Error al enviar mensaje:", err);
-        alert("No se ha podido enviar el mensaje. Inténtalo de nuevo más tarde.");
+        alert("No se ha podido enviar el mensaje.");
       }
     });
   </script>
