--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
     .footer-logo-row img {
       height: 30px;
-      background: #fff;
+      background: #d60000; /* rojo para que se vea el logo blanco */
       padding: 3px 6px;
       border-radius: 4px;
     }
@@ -409,27 +409,27 @@
         </p>
       </div>
 
-      <!-- Columna 2: Contacto (ajusta los datos reales) -->
+      <!-- Columna 2: Contacto -->
       <div class="footer-col">
         <h3>Contacto</h3>
         <p><strong>Dirección:</strong><br>
-          <!-- TODO: Sustituir por la dirección real de la Federación -->
-          Calle / Avenida XXX, nº XX<br>
-          CP 00000 · Ciudad (Extremadura)
+          Avenida Juan Carlos I, nº 47<br>
+          CP 06800 · Mérida (Extremadura)
         </p>
-        <p><strong>Teléfono:</strong> 900 000 000 <!-- Sustituir --></p>
+        <p><strong>Teléfono:</strong> 924 330 018</p>
         <p><strong>Correo:</strong>
-          <a href="mailto:ensenanza@feccooex.es">ensenanza@feccooex.es</a> <!-- Sustituir -->
+          <a href="mailto:educacion@extremadura.ccoo.es">educacion@extremadura.ccoo.es</a>
         </p>
       </div>
 
-      <!-- Columna 3: Enlaces rápidos -->
+      <!-- Columna 3: Enlaces rápidos (web y RRSS) -->
       <div class="footer-col">
         <h3>Enlaces rápidos</h3>
-        <p><a href="afiliacion.html">Afiliación a FECCOOEx</a></p>
-        <p><a href="normativa.html">Buscador de normativa educativa</a></p>
-        <p><a href="centros.html">Mapa de centros educativos</a></p>
-        <p><a href="delegados.html">Área de delegados/as</a></p>
+        <p><a href="https://extremadura.fe.ccoo.es/" target="_blank" rel="noopener noreferrer">Web FECCOOExtremadura</a></p>
+        <p><a href="https://www.facebook.com/feccooex" target="_blank" rel="noopener noreferrer">Facebook FECCOOEx</a></p>
+        <p><a href="https://x.com/FECCOOex" target="_blank" rel="noopener noreferrer">X (Twitter) FECCOOEx</a></p>
+        <p><a href="https://www.instagram.com/feccooex" target="_blank" rel="noopener noreferrer">Instagram FECCOOEx</a></p>
+        <p><a href="https://t.me/feccooextremadura" target="_blank" rel="noopener noreferrer">Canal de Telegram FECCOOExtremadura</a></p>
       </div>
     </div>
 
