--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #f7f7f7;
+      background: #f3f4f6;
       color: #222;
     }
 
@@ -23,7 +23,10 @@
       padding: 14px 24px;
       background: #d60000;
       color: #fff;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.25);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.25);
+      position: sticky;
+      top: 0;
+      z-index: 10;
     }
 
     header img {
@@ -46,20 +49,22 @@
       color: white;
       text-decoration: none;
       font-weight: 600;
-      padding: 6px 10px;
+      padding: 6px 12px;
       border: 1px solid rgba(255,255,255,0.7);
-      border-radius: 4px;
+      border-radius: 999px;
       transition: 0.2s ease;
     }
 
     nav a:hover {
-      background: rgba(255,255,255,0.2);
+      background: rgba(255,255,255,0.18);
+      transform: translateY(-1px);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.25);
     }
 
     /* MAIN GRID */
     main {
       max-width: 1300px;
-      margin: 30px auto;
+      margin: 26px auto 40px;
       padding: 0 16px 40px;
     }
 
@@ -90,17 +95,19 @@
     /* TARJETAS */
     .card {
       background: #fff;
-      border-radius: 10px;
+      border-radius: 12px;
       padding: 14px;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.10);
-      transition: transform .15s ease, box-shadow .15s ease;
+      border: 1px solid #e1e4ea;
+      box-shadow: 0 3px 8px rgba(15,23,42,0.10);
+      transition: transform .18s ease, box-shadow .18s ease, border-color .18s ease;
       display: flex;
       flex-direction: column;
     }
 
     .card:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 6px 14px rgba(0,0,0,0.18);
+      transform: translateY(-4px);
+      box-shadow: 0 10px 24px rgba(15,23,42,0.20);
+      border-color: #d60000;
     }
 
     .card-header {
@@ -114,21 +121,22 @@
     }
 
     .card-header h2 {
-      font-size: 1.1rem;
+      font-size: 1.05rem;
       margin: 0;
       color: #d60000;
     }
 
     .card-image {
       width: 100%;
-      border-radius: 6px;
-      margin: 10px 0;
+      border-radius: 8px;
+      margin: 10px 0 8px;
     }
 
     .card p {
       flex-grow: 1;
       font-size: 0.9rem;
       color: #444;
+      margin: 0 0 4px;
     }
 
     .btn {
@@ -136,17 +144,20 @@
       margin-top: 8px;
       padding: 8px 10px;
       text-align: center;
-      border-radius: 6px;
+      border-radius: 999px;
       font-size: 0.9rem;
       font-weight: 600;
       background: #d60000;
       color: #fff;
       text-decoration: none;
-      transition: background 0.2s;
+      transition: background 0.2s, transform 0.15s ease, box-shadow 0.15s ease;
+      box-shadow: 0 2px 6px rgba(214,0,0,0.3);
     }
 
     .btn:hover {
       background: #b40000;
+      transform: translateY(-1px);
+      box-shadow: 0 4px 10px rgba(180,0,0,0.35);
     }
 
     /* FOOTER INSTITUCIONAL */
